Lab/k8s_with_contrail/lab_exercise/old_doc/old2/lab2_ns_with_fip.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    opencontrail.org/isolation: "true"
    opencontrail.org/fip-pool: "{
      'domain': 'default-domain', 
      'project': 'k8s-lab2-ns3', 
      'network': 'k8s-external2-pod-network', 
      'name': 'external2-fip-pool'
    }" 
  name: lab2-ns3
