Lab/k8s_with_contrail/lab_exercise/old_doc/old2/pod-client.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: client1
spec:
  containers:
  - name: ubuntu
    image: contrailk8sdayone/ubuntu
    imagePullPolicy: IfNotPresent
  nodeName: node1
---
apiVersion: v1
kind: Pod
metadata:
  name: client2
spec:
  containers:
  - name: ubuntu
    image: contrailk8sdayone/ubuntu
    imagePullPolicy: IfNotPresent
  nodeName: node2
---
apiVersion: v1
kind: Pod
metadata:
  name: client3
spec:
  containers:
  - name: ubuntu
    image: contrailk8sdayone/ubuntu
    imagePullPolicy: IfNotPresent
  nodeName: node3
