Lab/k8s_with_contrail/lab_exercise/old_doc/old2/lab2_lb_lab2-ns3.yaml
#service-web-lb.yaml 
apiVersion: v1
kind: Service
metadata:
  name: service-web-5
  namespace: lab2-ns3
spec:
  selector:
    app: webserver5
  type: LoadBalancer
  ports:
  - targetPort: 80
    port: 80
---
#rc-webserver-do.yaml 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver5
  namespace: lab2-ns3
  labels:
    app: webserver5
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver5
    matchExpressions:
      - {key: app, operator: In, values: [webserver5]}
  template:
    metadata:
      name: webserver5
      labels:
        app: webserver5
    spec:
      volumes:
      - name: nfsnode4
        nfs:
          server: 172.16.12.14
          path: /media/nfsshare
      containers: 
      - name: webserver5
        image: contrailk8sdayone/contrail-webserver
        imagePullPolicy: IfNotPresent 
        securityContext:
           privileged: true
        ports: 
        - containerPort: 80
        volumeMounts:
        - name: nfsnode4
          mountPath: /app-dayone
