Lab/k8s_with_contrail/lab_exercise/old_doc/old2/lab2_services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-web-2
spec:
  ports:
  - port: 8888
    targetPort: 80
  selector:
    app: webserver2
---
apiVersion: v1
kind: Service
metadata:
  name: service-web-7
spec:
  ports:
  - port: 8888
    targetPort: 80
  selector:
    app: webserver7
---
apiVersion: v1
kind: Service
metadata:
  name: service-web-8
spec:
  ports:
  - port: 8888
    targetPort: 80
  selector:
    app: webserver8
---
apiVersion: v1
kind: Service
metadata:
  name: service-web-9
spec:
  ports:
  - port: 8888
    targetPort: 80
  selector:
    app: webserver9
---
apiVersion: v1
kind: Service
metadata:
  name: service-web-10
spec:
  ports:
  - port: 8888
    targetPort: 80
  selector:
    app: webserver10
