Lab/k8s_with_contrail/lab_exercise/old_doc/old2/lab2_ingress2_update1_new_api.yaml
---
# URL based filtering
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress2
spec:
  rules:
  - http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: service-web-7
            port: 
              number: 8888
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: service-web-8
            port: 
              number: 8888
  defaultBackend:
    service:
      name: service-web-2
      port: 
        number: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: service-web-7
spec:
  ports:
  - port: 8888
    targetPort: 80
  selector:
    app: webserver7
---
apiVersion: v1
kind: Service
metadata:
  name: service-web-8
spec:
  ports:
  - port: 8888
    targetPort: 80
  selector:
    app: webserver8
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver7
  labels:
    app: webserver7
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver7
    matchExpressions:
      - {key: app, operator: In, values: [webserver7]}
  template:
    metadata:
      name: webserver7
      labels:
        app: webserver7
    spec:
      volumes:
      - name: nfsnode4
        nfs:
          server: 172.16.12.14
          path: /media/nfsshare
      containers: 
      - name: webserver7
        image: contrailk8sdayone/contrail-webserver 
        securityContext:
           privileged: true
        ports: 
        - containerPort: 80
        volumeMounts:
        - name: nfsnode4
          mountPath: /app-dayone
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver8
  labels:
    app: webserver8
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver8
    matchExpressions:
      - {key: app, operator: In, values: [webserver8]}
  template:
    metadata:
      name: webserver8
      labels:
        app: webserver8
    spec:
      volumes:
      - name: nfsnode4
        nfs:
          server: 172.16.12.14
          path: /media/nfsshare
      containers: 
      - name: webserver8
        image: contrailk8sdayone/contrail-webserver 
        securityContext:
           privileged: true
        ports: 
        - containerPort: 80
        volumeMounts:
        - name: nfsnode4
          mountPath: /app-dayone
