Lab/k8s_with_contrail/lab_exercise/old_doc/old2/lab2_ingress2_update2.yaml
---
# URL based filtering
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress2
spec:
  backend:
    serviceName: service-web-2
    servicePort: 8888
  rules:
  - http:
      paths:
      - path: /foo
        backend:
          serviceName: service-web-7
          servicePort: 8888 
      - path: /bar
        backend:
          serviceName: service-web-8
          servicePort: 8888 
  - host: www.vmmlab4.com
    http:
      paths:
      - backend:
          serviceName: service-web-9
          servicePort: 8888
  - host: www.vmmlab5.com
    http:
      paths:
      - backend:
          serviceName: service-web-10
          servicePort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: service-web-9
spec:
  ports:
  - port: 8888
    targetPort: 80
  selector:
    app: webserver9
---
apiVersion: v1
kind: Service
metadata:
  name: service-web-10
spec:
  ports:
  - port: 8888
    targetPort: 80
  selector:
    app: webserver10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver9
  labels:
    app: webserver9
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver9
    matchExpressions:
      - {key: app, operator: In, values: [webserver9]}
  template:
    metadata:
      name: webserver9
      labels:
        app: webserver9
    spec:
      volumes:
      - name: nfsnode4
        nfs:
          server: 172.16.12.14
          path: /media/nfsshare
      containers: 
      - name: webserver9
        image: contrailk8sdayone/contrail-webserver 
        securityContext:
           privileged: true
        ports: 
        - containerPort: 80
        volumeMounts:
        - name: nfsnode4
          mountPath: /app-dayone
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver10
  labels:
    app: webserver10
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver10
    matchExpressions:
      - {key: app, operator: In, values: [webserver10]}
  template:
    metadata:
      name: webserver10
      labels:
        app: webserver10
    spec:
      volumes:
      - name: nfsnode4
        nfs:
          server: 172.16.12.14
          path: /media/nfsshare
      containers: 
      - name: webserver10
        image: contrailk8sdayone/contrail-webserver 
        securityContext:
           privileged: true
        ports: 
        - containerPort: 80
        volumeMounts:
        - name: nfsnode4
          mountPath: /app-dayone
